--- a/index.html
+++ b/index.html
@@ -1,47 +1,159 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
     <head>
-        <title>Unit Produksi SMKN 2 Tabanan</title>
-        <link rel="stylesheet" href="style.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1"
+        <title>Duta Cafetaria</title>
+        <link href="style.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <header>
-            <h1>Unit Produksi</h1>
-            <h3>Dari siswa, untuk siswa</h3>
+            <img src="img/logoSMK2.png" id="logo" alt="logo sekolah">
+            <h1>Duta Cafetaria</h1>
+            <h3>Unit Produksi SMK Negeri 2 Tabanan</h3>
         </header>
-        <hr>
         <main>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus amet optio odit, doloribus eaque nihil neque aliquid inventore, nam voluptas velit fugiat, quia laborum qui molestias reprehenderit voluptatibus dolorem perferendis?</p>
-            <p style="text-align: center;">Menu</p>
-            <div id="menu">
-                <div class="menu">
-                    <p>Daftar makanan:</p>
-                    <ul>
-                        <li>Nasi Goreng</li>
-                        <li>Mie Intel (Instan Telur) Goreng/Kuah</li>
-                        <li>Kentang Goreng</li>
-                        <li>Omelet</li>
-                    </ul>
+            <p>
+                Selamat datang di website resmi 
+                <br> 
+                Unit Produksi SMK Negeri 2 Tabanan,
+            </p>
+            <p>
+                Dimana makanan, minuman, dan peralatan sekolah dijual oleh siswa, untuk siswa!
+            </p>
+            <p>
+                Berikut adalah menu tetap di Duta Cafetaria;
+            </p>
+            <div id="menu-container">
+                <div class="align-items-center">
+                    <p>MAKANAN</p>
+                    <div id="makanan" class="carousel slide w-50">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#makanan" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Nasi Goreng"></button>
+                            <button type="button" data-bs-target="#makanan" data-bs-slide-to="1" aria-label="Capcay"></button>
+                            <button type="button" data-bs-target="#makanan" data-bs-slide-to="2" aria-label="Mie Instan Goreng"></button>
+                            <button type="button" data-bs-target="#makanan" data-bs-slide-to="3" aria-label="Mie Instan Kuah"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="img/nasigoreng.jpg" class="d-block w-100" alt="Nasi Goreng">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Nasi Goreng</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/capcay.jpg" class="d-block w-100" alt="Capcay">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Capcay</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/placeholder.jpg" class="d-block w-100" alt="Mie Instan Goreng">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Mie Instan Goreng</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/miekuah.jpg" class="d-block w-100" alt="Mie Instan Kuah">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Mie Instan Kuah</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#makanan" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#makanan" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
                 </div>
-                <div class="menu">
-                    <p>Daftar minuman:</p>
-                    <ul>
-                        <li>Es Teh / Teh Hangat</li>
-                        <li>Es Jeruk / Jeruk Hangat</li>
-                        <li>Kopi</li>
-                        <li>placeholder</li>
-                    </ul>
+                <div>
+                    <p>MINUMAN</p>
+                    <div id="minuman" class="carousel slide">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#minuman" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Es Teh"></button>
+                            <button type="button" data-bs-target="#minuman" data-bs-slide-to="1" aria-label="Es Jeruk"></button>
+                            <button type="button" data-bs-target="#minuman" data-bs-slide-to="2" aria-label="Kopi"></button>
+                            <button type="button" data-bs-target="#minuman" data-bs-slide-to="3" aria-label="Melon Squash"></button>
+                            <button type="button" data-bs-target="#minuman" data-bs-slide-to="4" aria-label="Fruit Squash"></button>
+                            <button type="button" data-bs-target="#minuman" data-bs-slide-to="5" aria-label="Orange Squash"></button>
+                            <button type="button" data-bs-target="#minuman" data-bs-slide-to="6" aria-label="Rainbow"></button>
+                            <button type="button" data-bs-target="#minuman" data-bs-slide-to="7" aria-label="Sunrise"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="img/esteh.jpg" class="d-block w-100" alt="Es Teh">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Es Teh</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/placeholder.jpg" class="d-block w-100" alt="Es Jeruk">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Es Jeruk</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/kopi.jpg" class="d-block w-100" alt="Kopi">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Kopi</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/placeholder.jpg" class="d-block w-100" alt="Melon Squash">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Melon Squash</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/placeholder.jpg" class="d-block w-100" alt="Fruit Squash">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Fruit Squash</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/orangesquash.jpg" class="d-block w-100" alt="Orange Squash">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Orange Squash</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/rainbow.jpg" class="d-block w-100" alt="Rainbow">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Rainbow</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/sunrise.jpg" class="d-block w-100" alt="Sunrise">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Sunrise</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#minuman" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#minuman" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </main>
         <footer>
-            <p>Ingin memesan? <a href="https://wa.me/6281770219886?text=Hai%20kak,%20saya%20mau%20mesen%20dong">Hubungi kami sekarang juga</a>, atau datang langsung ke Unit Produksi!</p>
             <em>
                 <p>BETA</p>
                 <p>Current state of the product is not representation of final product.</p>
             </em>
         </footer>
         <script src="script.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
     </body>
 </html>
