--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div id="menu-container">
                 <div class="align-items-center">
                     <p>MAKANAN</p>
-                    <div id="makanan" class="carousel slide w-50">
+                    <div id="makanan" class="carousel slide">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#makanan" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Nasi Goreng"></button>
                             <button type="button" data-bs-target="#makanan" data-bs-slide-to="1" aria-label="Capcay"></button>
@@ -48,7 +48,7 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="img/placeholder.jpg" class="d-block w-100" alt="Mie Instan Goreng">
+                                <img src="img/miegoreng.jpg" class="d-block w-100" alt="Mie Instan Goreng">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Mie Instan Goreng</h5>
                                 </div>
@@ -91,7 +91,7 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="img/placeholder.jpg" class="d-block w-100" alt="Es Jeruk">
+                                <img src="img/esjeruk.jpg" class="d-block w-100" alt="Es Jeruk">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Es Jeruk</h5>
                                 </div>
@@ -103,13 +103,13 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="img/placeholder.jpg" class="d-block w-100" alt="Melon Squash">
+                                <img src="img/melonsquash.jpg" class="d-block w-100" alt="Melon Squash">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Melon Squash</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="img/placeholder.jpg" class="d-block w-100" alt="Fruit Squash">
+                                <img src="img/fruitsquash.jpg" class="d-block w-100" alt="Fruit Squash">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Fruit Squash</h5>
                                 </div>
