fixin ONE PROBLEM I PROCRASTINATED FROM MONTHS AGO

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <p>
                 Berikut adalah menu tetap di Duta Cafetaria;
             </p>
-            <div id="menu-container">
-                <div class="align-items-center">
+            <div id="menu-container" class="row">
+                <div class="align-items-center col">
                     <p>MAKANAN</p>
                     <div id="makanan" class="carousel slide">
                         <div class="carousel-indicators">
@@ -36,7 +36,7 @@
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="img/nasigoreng.jpg" class="d-block w-100" alt="Nasi Goreng">
+                                <img src="img/nasigoreng.jpg" class="d-block w-100 fotoproduk" alt="Nasi Goreng">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Nasi Goreng</h5>
                                 </div>
@@ -70,7 +70,7 @@
                         </button>
                     </div>
                 </div>
-                <div>
+                <div class="col">
                     <p>MINUMAN</p>
                     <div id="minuman" class="carousel slide">
                         <div class="carousel-indicators">
