--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>
                 Berikut adalah menu tetap di Duta Cafetaria;
             </p>
-            <div id="menu-container" class="row">
+            <div id="menu-container" class="row-cols-md-2 m-2">
                 <div class="align-items-center col">
                     <p>MAKANAN</p>
                     <div id="makanan" class="carousel slide">
