--- a/index.html
+++ b/index.html
@@ -179,87 +179,87 @@
                             <p>Anda ingin memesan...</p>
                             <div class="float-start w-50">
                                 <h5>Makanan</h5>
-                                <input type="checkbox" id="nasi" name="order" value="Nasi">
+                                <input onclick="showfield(this)" type="checkbox" id="nasi" name="order" value="Nasi">
                                 <label for="nasi">Nasi</label>
-                                <input id="txtnasi" class="d-none"><br>
-                                <input type="checkbox" id="capcay" name="order" value="Capcay">
+                                <input id="txtnasi" style="display: none;" class="input"><br>
+                                <input onclick="showfield(this)" type="checkbox" id="capcay" name="order" value="Capcay">
                                 <label for="capcay">Capcay</label>
-                                <input id="txtcapcay" class="d-none"><br>
+                                <input id="txtcapcay" style="display: none;" class="input"><br>
                                 <button class="btn btn-primary mt-1" data-bs-toggle="collapse" data-bs-target="#nasigoreng" aria-expanded="false" aria-controls="nasigoreng">Nasi Goreng</button><br>
                                 <div class="collapse" id="nasigoreng">
-                                    <input type="checkbox" id="nasgorbiasa" name="order" value="Nasi Goreng Biasa">
+                                    <input onclick="showfield(this)" type="checkbox" id="nasgorbiasa" name="order" value="Nasi Goreng Biasa">
                                     <label for="nasgorbiasa">Nasi Goreng Biasa</label>
-                                    <input id="txtnasgorbiasa" class="d-none"><br>
-                                    <input type="checkbox" id="nasgorspecial" name="order" value="Nasi Goreng Spesial">
+                                    <input id="txtnasgorbiasa" style="display: none;" class="input"><br>
+                                    <input onclick="showfield(this)" type="checkbox" id="nasgorspecial" name="order" value="Nasi Goreng Spesial">
                                     <label for="nasgorspecial">Nasi Goreng Spesial</label>
-                                    <input id="txtnasgorspecial" class="d-none"><br>
-                                    <input type="checkbox" id="nasgorpaket" name="order value="Nasi Goreng Paket">
+                                    <input id="txtnasgorspecial" style="display: none;" class="input"><br>
+                                    <input onclick="showfield(this)" type="checkbox" id="nasgorpaket" name="order value="Nasi Goreng Paket">
                                     <label for="nasgorpaket">Nasi Goreng Paket</label>
-                                    <input id="txtnasgorpaket" class="d-none"><br>
+                                    <input id="txtnasgorpaket" style="display: none;" class="input"><br>
                                 </div>
                                 <button class="btn btn-primary mt-1" data-bs-toggle="collapse" data-bs-target="#mieinstan" aria-expanded="false" aria-controls="mieinstan">Mie Instan</button><br>
                                 <div class="collapse" id="mieinstan">
-                                    <input type="checkbox" id="miegoreng" name="order" value="Mie Goreng">
+                                    <input onclick="showfield(this)" type="checkbox" id="miegoreng" name="order" value="Mie Goreng">
                                     <label for="miegoreng">Mie Goreng</label>
-                                    <input id="txtmiegoreng" class="d-none"><br>
-                                    <input type="checkbox" id="miegorengtelur" name="order" value="Mie Goreng Telur">
+                                    <input id="txtmiegoreng" style="display: none;" class="input"><br>
+                                    <input onclick="showfield(this)" type="checkbox" id="miegorengtelur" name="order" value="Mie Goreng Telur">
                                     <label for="miegorengtelur">Mie Goreng Telur</label>
-                                    <input id="txtmiegorengtelur" class="d-none"><br>
-                                    <input type="checkbox" id="miekuah" name="order" value="Mie Kuah">
+                                    <input id="txtmiegorengtelur" style="display: none;" class="input"><br>
+                                    <input onclick="showfield(this)" type="checkbox" id="miekuah" name="order" value="Mie Kuah">
                                     <label for="miekuah">Mie Kuah</label>
-                                    <input id="txtmiekuah" class="d-none"><br>
-                                    <input type="checkbox" id="miekuahtelur" name="order" value="Mie Kuah Telur">
+                                    <input id="txtmiekuah" style="display: none;" class="input"><br>
+                                    <input onclick="showfield(this)" type="checkbox" id="miekuahtelur" name="order" value="Mie Kuah Telur">
                                     <label for="miekuahtelur">Mie Kuah Telur</label>
-                                    <input id="txtmiekuahtelur" class="d-none"><br>
+                                    <input id="txtmiekuahtelur" style="display: none;" class="input"><br>
                                 </div>
                             </div>
                             <div class="float-end w-50">
                                 <h5>Minuman</h5>
-                                <input type="checkbox" id="aqua" name="order" value="Aqua">
+                                <input onclick="showfield(this)" type="checkbox" id="aqua" name="order" value="aqua">
                                 <label for="aqua">Aqua</label>
-                                <input id="txtaqua" class="d-none"><br>
+                                <input id="txtaqua" style="display: none;" class="input"><br>
                                 <button class="btn btn-primary mt-1" data-bs-toggle="collapse" data-bs-target="#teh" aria-expanded="false" aria-controls="teh">Teh</button><br>
                                 <div class="collapse" id="teh">
-                                    <input type="checkbox" id="tehpanas" name="order" value="Teh Panas">
+                                    <input onclick="showfield(this)" type="checkbox" id="tehpanas" name="order" value="Teh Panas">
                                     <label for="tehpanas">Teh Panas</label>
-                                    <input id="txttehpanas" class="d-none"><br>
-                                    <input type="checkbox" id="tehdingin" name="order" value="Teh Dingin">
+                                    <input id="txttehpanas" style="display: none;" class="input"><br>
+                                    <input onclick="showfield(this)" type="checkbox" id="tehdingin" name="order" value="Teh Dingin">
                                     <label for="tehdingin">Teh Dingin</label>
-                                    <input id="txttehdingin" class="d-none"><br>
+                                    <input id="txttehdingin" style="display: none;" class="input"><br>
                                 </div>
                                 <button class="btn btn-primary mt-1" data-bs-toggle="collapse" data-bs-target="#jeruk" aria-expanded="false" aria-controls="jeruk">Jeruk</button><br>
                                 <div class="collapse" id="jeruk">
-                                    <input type="checkbox" id="jerukpanas" name="order" value="Jeruk Panas">
+                                    <input onclick="showfield(this)" type="checkbox" id="jerukpanas" name="order" value="Jeruk Panas">
                                     <label for="jerukpanas">Jeruk Panas</label>
-                                    <input id="txtjerukpanas" class="d-none"><br>
-                                    <input type="checkbox" id="jerukdingin" name="order" value="Jeruk Dingin">
+                                    <input id="txtjerukpanas" style="display: none;" class="input"><br>
+                                    <input onclick="showfield(this)" type="checkbox" id="jerukdingin" name="order" value="Jeruk Dingin">
                                     <label for="jerukdingin">Jeruk Dingin</label>
-                                    <input id="txtjerukdingin" class="d-none"><br>
+                                    <input id="txtjerukdingin" style="display: none;" class="input"><br>
                                 </div>
                                 <button class="btn btn-primary mt-1" data-bs-toggle="collapse" data-bs-target="#kopi" aria-expanded="false" aria-controls="kopi">Kopi</button><br>
                                 <div class="collapse" id="kopi">
-                                    <input type="checkbox" id="abcsusu" name="order" value="ABC Susu">
+                                    <input onclick="showfield(this)" type="checkbox" id="abcsusu" name="order" value="ABC Susu">
                                     <label for="abcsusu">ABC Susu</label>
-                                    <input id="txtabcsusu" class="d-none"><br>
-                                    <input type="checkbox" id="nescafe" name="order" value="Nescafe">
+                                    <input id="txtabcsusu" style="display: none;" class="input"><br>
+                                    <input onclick="showfield(this)" type="checkbox" id="nescafe" name="order" value="Nescafe">
                                     <label for="nescafe">Nescafe</label>
-                                    <input id="txtnescafe" class="d-none"><br>
+                                    <input id="txtnescafe" style="display: none;" class="input"><br>
                                 </div>
-                                <input type="checkbox" id="melonsquash" name="order" value="Melon Squash">
+                                <input onclick="showfield(this)" type="checkbox" id="melonsquash" name="order" value="Melon Squash">
                                 <label for="melonsquash">Melon Squash</label>
-                                <input id="txtmelonsquash" class="d-none"><br>
-                                <input type="checkbox" id="orangequash" name="order" value="Orange Squash">
+                                <input id="txtmelonsquash" style="display: none;" class="input"><br>
+                                <input onclick="showfield(this)" type="checkbox" id="orangequash" name="order" value="Orange Squash">
                                 <label for="orangesquash">Orange Squash</label>
-                                <input id="txtorangesquash" class="d-none"><br>
-                                <input type="checkbox" id="fruitsquash" name="order" value="Fruit Squash">
+                                <input id="txtorangesquash" style="display: none;" class="input"><br>
+                                <input onclick="showfield(this)" type="checkbox" id="fruitsquash" name="order" value="Fruit Squash">
                                 <label for="fruitsquash">Fruit Squash</label>
-                                <input id="txtfruitsquash" class="d-none"><br>
-                                <input type="checkbox" id="rainbow" name="order" value="Rainbow">
+                                <input id="txtfruitsquash" style="display: none;" class="input"><br>
+                                <input onclick="showfield(this)" type="checkbox" id="rainbow" name="order" value="Rainbow">
                                 <label for="rainbow">Rainbow</label>
-                                <input id="txtrainbow" class="d-none"><br>
-                                <input type="checkbox" id="sunrise" name="order" value="Sunrise">
+                                <input id="txtrainbow" style="display: none;" class="input"><br>
+                                <input onclick="showfield(this)" type="checkbox" id="sunrise" name="order" value="Sunrise">
                                 <label for="sunrise">Sunrise</label>
-                                <input id="txtsunrise" class="d-none"><br>
+                                <input id="txtsunrise" style="display: none;" class="input"><br>
                             </div>
                         </div>
                         <div class="modal-footer">
