finishing order pop up, footer

--- a/index.html
+++ b/index.html
@@ -271,7 +271,9 @@
                             <label for="sekarang">Sekarang</label>
                             <input id="jam" type="radio" name="waktu" value="Jam">
                             <label for="jam">Jam</label>
-                            <input name="waktu" id="txtjam" style="display: none;">
+                            <input name="waktu" id="txtjam" style="display: none;"><br>
+                            <input type="checkbox" name="rememberidentity" id="rememberidentity">
+                            <label for="rememberidentity">Ingat saya</label>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
@@ -281,12 +283,10 @@
                 </div>
             </div>
         </main>
-        <footer>
-            <em>
-                <p>BETA</p>
-                <p>Current state of the product is not representation of final product.</p>
-                <p>&#169 <a href="https://thethirdswan.github.io">Arya Suwandika</a>, untuk <a href="https://smkn2tabanan.sch.id/">SMK Negeri 2 Tabanan</a>.</p>
-            </em>
+        <footer class="p-2">
+            <p>BETA</p>
+            <p>Current state of the product is not representation of final product.</p>
+            <p>&#169 <a href="https://thethirdswan.github.io" class="link">Arya Suwandika</a>, untuk <a href="https://smkn2tabanan.sch.id/" class="link">SMK Negeri 2 Tabanan</a>.</p>
         </footer>
         <script src="script.js"></script>
         <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script> -->
