made captions visible on mobile

--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img src="img/nasigoreng.jpg" class="d-block w-100 fotoproduk" alt="Nasi Goreng">
-                                <div class="carousel-caption d-none d-md-block">
+                                <div class="carousel-caption d-block">
                                     <h5>Nasi Goreng</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="img/capcay.jpg" class="d-block w-100" alt="Capcay">
-                                <div class="carousel-caption d-none d-md-block">
+                                <div class="carousel-caption d-block">
                                     <h5>Capcay</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="img/miegoreng.jpg" class="d-block w-100" alt="Mie Instan Goreng">
-                                <div class="carousel-caption d-none d-md-block">
+                                <div class="carousel-caption d-block">
                                     <h5>Mie Instan Goreng</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="img/miekuah.jpg" class="d-block w-100" alt="Mie Instan Kuah">
-                                <div class="carousel-caption d-none d-md-block">
+                                <div class="carousel-caption d-block">
                                     <h5>Mie Instan Kuah</h5>
                                 </div>
                             </div>
@@ -86,49 +86,49 @@
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img src="img/esteh.jpg" class="d-block w-100" alt="Es Teh">
-                                <div class="carousel-caption d-none d-md-block">
+                                <div class="carousel-caption d-block">
                                     <h5>Es Teh</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="img/esjeruk.jpg" class="d-block w-100" alt="Es Jeruk">
-                                <div class="carousel-caption d-none d-md-block">
+                                <div class="carousel-caption d-block">
                                     <h5>Es Jeruk</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="img/kopi.jpg" class="d-block w-100" alt="Kopi">
-                                <div class="carousel-caption d-none d-md-block">
+                                <div class="carousel-caption d-block">
                                     <h5>Kopi</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="img/melonsquash.jpg" class="d-block w-100" alt="Melon Squash">
-                                <div class="carousel-caption d-none d-md-block">
+                                <div class="carousel-caption d-block">
                                     <h5>Melon Squash</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="img/fruitsquash.jpg" class="d-block w-100" alt="Fruit Squash">
-                                <div class="carousel-caption d-none d-md-block">
+                                <div class="carousel-caption d-block">
                                     <h5>Fruit Squash</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="img/orangesquash.jpg" class="d-block w-100" alt="Orange Squash">
-                                <div class="carousel-caption d-none d-md-block">
+                                <div class="carousel-caption d-block">
                                     <h5>Orange Squash</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="img/rainbow.jpg" class="d-block w-100" alt="Rainbow">
-                                <div class="carousel-caption d-none d-md-block">
+                                <div class="carousel-caption d-block">
                                     <h5>Rainbow</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="img/sunrise.jpg" class="d-block w-100" alt="Sunrise">
-                                <div class="carousel-caption d-none d-md-block">
+                                <div class="carousel-caption d-block">
                                     <h5>Sunrise</h5>
                                 </div>
                             </div>
