--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <p>
                 Berikut adalah menu tetap di Duta Cafetaria;
             </p>
-            <div id="menu-container" class="row-cols-md-2 m-2">
-                <div class="align-items-center col">
+            <div id="menu-container" class="m-2">
+                <div class="col">
                     <p>MAKANAN</p>
                     <div id="makanan" class="carousel slide">
                         <div class="carousel-indicators">
