--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         </div>
                         <div class="modal-body">
                             <p>Anda ingin menanyakan tentang...</p>
-                            <input type="radio" id="radiomenu" name="tanya" value="Menu">
+                            <input type="radio" id="radiomenu" name="tanya" value="Menu" checked>
                             <label for="radiomenu">Menu</label><br>
                             <input type="radio" id="radioprint" name="tanya" value="Print">
                             <label for="radioprint">Print</label><br>
@@ -284,8 +284,7 @@
             </div>
         </main>
         <footer class="p-2">
-            <p>BETA</p>
-            <p>Current state of the product is not representation of final product.</p>
+            <p>Fight for all that is beautiful in this world.</p>
             <p>&#169 <a href="https://thethirdswan.github.io" class="link">Arya Suwandika</a>, untuk <a href="https://smkn2tabanan.sch.id/" class="link">SMK Negeri 2 Tabanan</a>.</p>
         </footer>
         <script src="script.js"></script>
