updating total prototype

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
-                            <button class="btn btn-secondary" data-bs-toggle="popover" data-bs-placement="top" data-bs-title="Total" data-bs-content="Total : 0">Total</button>
+                            <button type="button" id="totalbutton" class="btn btn-secondary" data-bs-toggle="popover" data-bs-placement="top" data-bs-title="Total" data-bs-content="Total : 0">Total</button>
                             <button onclick="pesan()" type="button" class="btn btn-primary" data-bs-dismiss="modal">Pesan</button>
                         </div>
                     </div>
