removed total button, replaced with text

--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
                             <label for="rememberidentity">Ingat saya</label>
                         </div>
                         <div class="modal-footer">
+                            <p>Total : Rp 0</p>
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
-                            <button type="button" id="totalbutton" class="btn btn-secondary" data-bs-toggle="popover" data-bs-placement="top" data-bs-title="Total" data-bs-content="Total : 0">Total</button>
                             <button onclick="pesan()" type="button" class="btn btn-primary" data-bs-dismiss="modal">Pesan</button>
                         </div>
                     </div>
