updated total prototype #3

--- a/index.html
+++ b/index.html
@@ -193,85 +193,85 @@
                                 <h5>Makanan</h5>
                                 <input onclick="showfield(this)" type="checkbox" id="nasi" name="order" value="Nasi">
                                 <label for="nasi">Nasi</label>
-                                <input id="txtnasi" style="display: none;" class="input" value="1"><br>
+                                <input id="txtnasi" style="display: none;" class="input" value=""><br>
                                 <input onclick="showfield(this)" type="checkbox" id="capcay" name="order" value="Capcay">
                                 <label for="capcay">Capcay</label>
-                                <input id="txtcapcay" style="display: none;" class="input" value="1"><br>
+                                <input id="txtcapcay" style="display: none;" class="input" value=""><br>
                                 <button class="btn btn-primary mt-1" data-bs-toggle="collapse" data-bs-target="#nasigoreng" aria-expanded="false" aria-controls="nasigoreng">Nasi Goreng</button><br>
                                 <div class="collapse" id="nasigoreng">
                                     <input onclick="showfield(this)" type="checkbox" id="nasgorbiasa" name="order" value="Nasi Goreng Biasa">
                                     <label for="nasgorbiasa">Nasi Goreng Biasa</label>
-                                    <input id="txtnasgorbiasa" style="display: none;" class="input" value="1"><br>
+                                    <input id="txtnasgorbiasa" style="display: none;" class="input" value=""><br>
                                     <input onclick="showfield(this)" type="checkbox" id="nasgorspecial" name="order" value="Nasi Goreng Spesial">
                                     <label for="nasgorspecial">Nasi Goreng Spesial</label>
-                                    <input id="txtnasgorspecial" style="display: none;" class="input" value="1"><br>
+                                    <input id="txtnasgorspecial" style="display: none;" class="input" value=""><br>
                                     <input onclick="showfield(this)" type="checkbox" id="nasgorpaket" name="order value="Nasi Goreng Paket">
                                     <label for="nasgorpaket">Nasi Goreng Paket</label>
-                                    <input id="txtnasgorpaket" style="display: none;" class="input" value="1"><br>
+                                    <input id="txtnasgorpaket" style="display: none;" class="input" value=""><br>
                                 </div>
                                 <button class="btn btn-primary mt-1" data-bs-toggle="collapse" data-bs-target="#mieinstan" aria-expanded="false" aria-controls="mieinstan">Mie Instan</button><br>
                                 <div class="collapse" id="mieinstan">
                                     <input onclick="showfield(this)" type="checkbox" id="miegoreng" name="order" value="Mie Goreng">
                                     <label for="miegoreng">Mie Goreng</label>
-                                    <input id="txtmiegoreng" style="display: none;" class="input" value="1"><br>
+                                    <input id="txtmiegoreng" style="display: none;" class="input" value=""><br>
                                     <input onclick="showfield(this)" type="checkbox" id="miegorengtelur" name="order" value="Mie Goreng Telur">
                                     <label for="miegorengtelur">Mie Goreng Telur</label>
-                                    <input id="txtmiegorengtelur" style="display: none;" class="input" value="1"><br>
+                                    <input id="txtmiegorengtelur" style="display: none;" class="input" value=""><br>
                                     <input onclick="showfield(this)" type="checkbox" id="miekuah" name="order" value="Mie Kuah">
                                     <label for="miekuah">Mie Kuah</label>
-                                    <input id="txtmiekuah" style="display: none;" class="input" value="1"><br>
+                                    <input id="txtmiekuah" style="display: none;" class="input" value=""><br>
                                     <input onclick="showfield(this)" type="checkbox" id="miekuahtelur" name="order" value="Mie Kuah Telur">
                                     <label for="miekuahtelur">Mie Kuah Telur</label>
-                                    <input id="txtmiekuahtelur" style="display: none;" class="input" value="1"><br>
+                                    <input id="txtmiekuahtelur" style="display: none;" class="input" value=""><br>
                                 </div>
                             </div>
                             <div class="float-end w-50 p-2">
                                 <h5>Minuman</h5>
                                 <input onclick="showfield(this)" type="checkbox" id="aqua" name="order" value="Aqua">
                                 <label for="aqua">Aqua</label>
-                                <input id="txtaqua" style="display: none;" class="input" value="1"><br>
+                                <input id="txtaqua" style="display: none;" class="input" value=""><br>
                                 <button class="btn btn-primary mt-1" data-bs-toggle="collapse" data-bs-target="#teh" aria-expanded="false" aria-controls="teh">Teh</button><br>
                                 <div class="collapse" id="teh">
                                     <input onclick="showfield(this)" type="checkbox" id="tehpanas" name="order" value="Teh Panas">
                                     <label for="tehpanas">Teh Panas</label>
-                                    <input id="txttehpanas" style="display: none;" class="input" value="1"><br>
+                                    <input id="txttehpanas" style="display: none;" class="input" value=""><br>
                                     <input onclick="showfield(this)" type="checkbox" id="tehdingin" name="order" value="Teh Dingin">
                                     <label for="tehdingin">Teh Dingin</label>
-                                    <input id="txttehdingin" style="display: none;" class="input" value="1"><br>
+                                    <input id="txttehdingin" style="display: none;" class="input" value=""><br>
                                 </div>
                                 <button class="btn btn-primary mt-1" data-bs-toggle="collapse" data-bs-target="#jeruk" aria-expanded="false" aria-controls="jeruk">Jeruk</button><br>
                                 <div class="collapse" id="jeruk">
                                     <input onclick="showfield(this)" type="checkbox" id="jerukpanas" name="order" value="Jeruk Panas">
                                     <label for="jerukpanas">Jeruk Panas</label>
-                                    <input id="txtjerukpanas" style="display: none;" class="input" value="1"><br>
+                                    <input id="txtjerukpanas" style="display: none;" class="input" value=""><br>
                                     <input onclick="showfield(this)" type="checkbox" id="jerukdingin" name="order" value="Jeruk Dingin">
                                     <label for="jerukdingin">Jeruk Dingin</label>
-                                    <input id="txtjerukdingin" style="display: none;" class="input" value="1"><br>
+                                    <input id="txtjerukdingin" style="display: none;" class="input" value=""><br>
                                 </div>
                                 <button class="btn btn-primary mt-1" data-bs-toggle="collapse" data-bs-target="#kopi" aria-expanded="false" aria-controls="kopi">Kopi</button><br>
                                 <div class="collapse" id="kopi">
                                     <input onclick="showfield(this)" type="checkbox" id="abcsusu" name="order" value="ABC Susu">
                                     <label for="abcsusu">ABC Susu</label>
-                                    <input id="txtabcsusu" style="display: none;" class="input" value="1"><br>
+                                    <input id="txtabcsusu" style="display: none;" class="input" value=""><br>
                                     <input onclick="showfield(this)" type="checkbox" id="nescafe" name="order" value="Nescafe">
                                     <label for="nescafe">Nescafe</label>
-                                    <input id="txtnescafe" style="display: none;" class="input" value="1"><br>
+                                    <input id="txtnescafe" style="display: none;" class="input" value=""><br>
                                 </div>
                                 <input onclick="showfield(this)" type="checkbox" id="melonsquash" name="order" value="Melon Squash">
                                 <label for="melonsquash">Melon Squash</label>
-                                <input id="txtmelonsquash" style="display: none;" class="input" value="1"><br>
+                                <input id="txtmelonsquash" style="display: none;" class="input" value=""><br>
                                 <input onclick="showfield(this)" type="checkbox" id="orangesquash" name="order" value="Orange Squash">
                                 <label for="orangesquash">Orange Squash</label>
-                                <input id="txtorangesquash" style="display: none;" class="input" value="1"><br>
+                                <input id="txtorangesquash" style="display: none;" class="input" value=""><br>
                                 <input onclick="showfield(this)" type="checkbox" id="fruitsquash" name="order" value="Fruit Squash">
                                 <label for="fruitsquash">Fruit Squash</label>
-                                <input id="txtfruitsquash" style="display: none;" class="input" value="1"><br>
+                                <input id="txtfruitsquash" style="display: none;" class="input" value=""><br>
                                 <input onclick="showfield(this)" type="checkbox" id="rainbow" name="order" value="Rainbow">
                                 <label for="rainbow">Rainbow</label>
-                                <input id="txtrainbow" style="display: none;" class="input" value="1"><br>
+                                <input id="txtrainbow" style="display: none;" class="input" value=""><br>
                                 <input onclick="showfield(this)" type="checkbox" id="sunrise" name="order" value="Sunrise">
                                 <label for="sunrise">Sunrise</label>
-                                <input id="txtsunrise" style="display: none;" class="input" value="1"><br>
+                                <input id="txtsunrise" style="display: none;" class="input" value=""><br>
                             </div>
                         </div>
                         <div id="identitas" class="ms-4 mb-2">
