--- a/index.html
+++ b/index.html
@@ -287,6 +287,9 @@
                             <input name="waktu" id="txtjam" style="display: none;"><br>
                             <input type="checkbox" name="rememberidentity" id="rememberidentity">
                             <label for="rememberidentity">Ingat saya</label>
+                            <input type="checkbox" name="note" id="note">
+                            <label for="note">Tambah catatan?</label>
+                            <textarea id="txtnote" style="display: none;" placeholder="Catatan disini..."></textarea>
                         </div>
                         <div class="modal-footer">
                             <p>Total : Rp <span id="total">0</span></p>
