print menu in progress

--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
                             <label for="radiomenu">Menu</label><br>
                             <input type="radio" id="radioprint" name="tanya" value="Print">
                             <label for="radioprint">Print</label><br>
+                            <div style="display: none;" id="containerprint">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium rerum a ut necessitatibus voluptatibus voluptates, sint incidunt veritatis. Modi natus qui soluta harum hic quidem rem pariatur accusamus repudiandae perspiciatis.</p>
+                            </div>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
