added paper total field

--- a/index.html
+++ b/index.html
@@ -176,20 +176,22 @@
                             <div style="display: none;" id="containerprint">
                                 <div class="float-start w-50 p-2">
                                     <p>Kertas</p>
-                                    <input type="radio" id="kertasa4" name="kertas" value="A4">
+                                    <input type="radio" id="kertasa4" name="kertas" value="A4" checked>
                                     <label for="kertasa4">A4</label><br>
                                     <input type="radio" id="kertasf4" name="kertas" value="F4">
                                     <label for="kertasf4">F4</label>
                                 </div>
                                 <div class="float-end w-50 p-2">
                                     <p>Tipe Print</p>
-                                    <input type="radio" id="berwarna" name="tipe" value="Warna">
+                                    <input type="radio" id="berwarna" name="tipe" value="Warna" checked>
                                     <label for="berwarna">Warna</label><br>
                                     <input type="radio" id="hitamputih" name="tipe" value="Hitam Putih">
                                     <label for="hitamputih">Hitam Putih</label><br>
                                     <input type="radio" id="nametag" name="tipe" value="Nametag">
                                     <label for="nametag">Nametag</label>
-                                </div>
+                                </div><br>
+                                <label for="jumlahlembar">Jumlah Lembar yang ingin dicetak</label>
+                                <input type="number" id="jumlahlembar" name="jumlahlembar">
                             </div>
                         </div>
                         <div class="modal-footer">
